--- a/src/AutoMapper.Extensions.Autofac.DependencyInjection/AutoMapper.Extensions.Autofac.DependencyInjection.csproj
+++ b/src/AutoMapper.Extensions.Autofac.DependencyInjection/AutoMapper.Extensions.Autofac.DependencyInjection.csproj
@@ -8,11 +8,11 @@
     <Authors>Sami Al Khatib</Authors>
     <Title>AutoMapper-Autofac-Extension</Title>
     <Description>An extension for Autofac-IoC to use AutoMapper with ease.</Description>
-    <PackageProjectUrl>https://github.com/cleancodelabs/automapper-extensions-autofac-dependencyInjection</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/cleancodelabs/AutoMapper.Extensions.Autofac.DependencyInjection</PackageProjectUrl>
     <PackageTags>AutoMapper, Object-To-Object-Mapping, Mapper, Autofac, IoC</PackageTags>
     <PackageIconUrl>https://s3.amazonaws.com/automapper/icon.png</PackageIconUrl>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>git://github.com/cleancodelabs/automapper-extensions-autofac-dependencyInjection</RepositoryUrl>
+    <RepositoryUrl>git://github.com/cleancodelabs/AutoMapper.Extensions.Autofac.DependencyInjection</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
