--- a/test/AutoMapper.Extensions.Autofac.DependencyInjection.Tests/AutoMapper.Extensions.Autofac.DependencyInjection.Tests.csproj
+++ b/test/AutoMapper.Extensions.Autofac.DependencyInjection.Tests/AutoMapper.Extensions.Autofac.DependencyInjection.Tests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <RootNamespace>AutoMapper.Extensions.Autofac.DependencyInjection.IntegrationTests</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
